--- a/public/edit.html
+++ b/public/edit.html
@@ -74,7 +74,7 @@
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h3>تعديل الفيديوهات</h3>
     <div class="d-flex gap-2">
-      <a href="index.html" class="btn btn-secondary">إضافة فيديو جديد</a>
+      <a href="add.html" class="btn btn-secondary">إضافة فيديو جديد</a>
       <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
     </div>
   </div>
