--- a/public/add.html
+++ b/public/add.html
@@ -118,7 +118,7 @@ document.getElementById('videoForm').addEventListener('submit', async function(e
   const response = await fetch(`${API_BASE}/api/videos`, {
     method: 'POST',
     headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ title, url, description, department })
+    body: JSON.stringify({ title, link: url, url, description, department })
   });
 
   if (response.ok) {
