--- a/public/edit.html
+++ b/public/edit.html
@@ -68,7 +68,7 @@
       z-index: 9998;
     }
   </style>
-  <!-- إضافة مكتبة CKEditor -->
+  <!-- مكتبة CKEditor -->
   <script src="https://cdn.ckeditor.com/ckeditor5/41.1.0/classic/ckeditor.js"></script>
 </head>
 <body>
@@ -137,12 +137,31 @@ let videos = [];
 const container = document.getElementById('videoContainer');
 const deptSelect = document.getElementById('deptSelect');
 const editModal = new bootstrap.Modal(document.getElementById('editModal'));
-let descEditor; // محرر الوصف
+let descEditor;
 
-// تهيئة CKEditor
+// تهيئة CKEditor مع روابط وصور وجداول
 ClassicEditor
     .create(document.querySelector('#editDesc'), {
-        toolbar: ['bold', 'italic', 'link', 'bulletedList', 'numberedList', 'undo', 'redo']
+        toolbar: [
+            'bold', 'italic', 'link', 'insertImage', 'insertTable', 'bulletedList', 'numberedList', '|', 'undo', 'redo'
+        ],
+        link: {
+            addTargetToExternalLinks: true,
+            defaultProtocol: 'https://',
+            decorators: {
+                openInNewTab: {
+                    mode: 'manual',
+                    label: 'فتح في تبويب جديد',
+                    attributes: {
+                        target: '_blank',
+                        rel: 'noopener noreferrer'
+                    }
+                }
+            }
+        },
+        table: {
+            contentToolbar: ['tableColumn', 'tableRow', 'mergeTableCells']
+        }
     })
     .then(editor => {
         descEditor = editor;
