--- a/public/edit.html
+++ b/public/edit.html
@@ -5,299 +5,49 @@
   <title>تعديل الفيديوهات</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
-    body {
-      background-color: #f7f9fc;
-      padding: 30px;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      gap: 20px;
-    }
-    .video-card {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    .video-card h5 {
-      height: 3em;
-      line-height: 1.5em;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-    }
-    .action-buttons {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      display: flex;
-      gap: 10px;
-    }
-    .form-select, .form-control {
-      margin-bottom: 15px;
-    }
-    .desc-tooltip, .title-tooltip {
-      cursor: pointer;
-      text-decoration: underline;
-    }
-    .modal-desc {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      z-index: 9999;
-      max-width: 500px;
-      text-align: center;
-    }
-    .modal-backdrop-custom {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0,0,0,0.5);
-      z-index: 9998;
-    }
+    body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
+    .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
+    .video-card { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: relative; }
+    .video-card h5 { height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
+    .action-buttons { margin-top: 10px; display: flex; gap: 5px; }
   </style>
-  <!-- CKEditor Super-Build -->
-  <script src="https://cdn.ckeditor.com/ckeditor5/41.1.0/super-build/ckeditor.js"></script>
 </head>
 <body>
 <div class="container">
-  <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3>تعديل الفيديوهات</h3>
-    <div class="d-flex gap-2">
-      <a href="add.html" class="btn btn-secondary">إضافة فيديو جديد</a>
-      <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
-    </div>
-  </div>
-  
-  <select id="deptSelect" class="form-select" onchange="renderFilteredVideos()">
-    <option value="">-- اختر القسم --</option>
-  </select>
-  
-  <input type="text" id="searchInput" class="form-control" placeholder="ابحث بعنوان أو وصف الفيديو..." oninput="renderFilteredVideos()">
-
-  <div class="form-check mb-3">
-    <input type="checkbox" class="form-check-input" id="selectAll" onchange="toggleSelectAll(this)">
-    <label for="selectAll" class="form-check-label">تحديد الكل</label>
-  </div>
-
-  <button class="btn btn-danger mb-4" onclick="confirmDeleteSelectedVideos()">حذف المحدد</button>
-
+  <h3>تعديل الفيديوهات</h3>
   <div id="videoContainer" class="video-grid"></div>
 </div>
 
-<div id="descModal" class="modal-desc" style="display:none">
-  <p id="fullText"></p>
-  <button class="btn btn-secondary mt-3" onclick="hideModal()">إغلاق</button>
-</div>
-<div id="descBackdrop" class="modal-backdrop-custom" style="display:none" onclick="hideModal()"></div>
-
-<!-- نافذة تعديل الفيديو -->
-<div class="modal fade" id="editModal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">تعديل الفيديو</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <input type="hidden" id="editId">
-        <label class="form-label">العنوان</label>
-        <input type="text" class="form-control mb-2" id="editTitle">
-        <label class="form-label">الوصف</label>
-        <textarea class="form-control mb-2" id="editDesc"></textarea>
-        <label class="form-label">رابط الفيديو</label>
-        <input type="text" class="form-control mb-2" id="editUrl">
-        <label class="form-label">القسم</label>
-        <select class="form-select" id="editDept"></select>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
-        <button type="button" class="btn btn-primary" onclick="saveEditModal()">حفظ</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
-let descEditor = null;
-const container = document.getElementById('videoContainer');
-const deptSelect = document.getElementById('deptSelect');
-const editModal = new bootstrap.Modal(document.getElementById('editModal'));
-
-function showModal(text) {
-  document.getElementById('fullText').innerHTML = text;
-  document.getElementById('descModal').style.display = 'block';
-  document.getElementById('descBackdrop').style.display = 'block';
-}
-function hideModal() {
-  document.getElementById('descModal').style.display = 'none';
-  document.getElementById('descBackdrop').style.display = 'none';
-}
-
-function openInPopup(link) {
-  if (!link || link === 'undefined') {
-    alert('الرابط غير صالح');
-    return;
-  }
-  window.open(link, '_blank', 'width=800,height=600');
-}
-
-function toggleSelectAll(source) {
-  document.querySelectorAll('#videoContainer input[type="checkbox"]').forEach(cb => cb.checked = source.checked);
-}
-
-async function confirmDeleteSelectedVideos() {
-  if (!confirm('هل أنت متأكد من حذف جميع الفيديوهات المحددة؟')) return;
-  const selected = [...document.querySelectorAll('#videoContainer input[type="checkbox"]:checked')].map(cb => cb.getAttribute('data-id'));
-  await Promise.all(selected.map(id => fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' })));
-  await fetchVideos();
-  renderFilteredVideos();
-}
-
-async function deleteVideo(id) {
-  if (!confirm('هل تريد حذف هذا الفيديو؟')) return;
-  await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
-  await fetchVideos();
-  renderFilteredVideos();
-}
-
-function editVideo(id) {
-  const video = videos.find(v => v._id === id);
-  document.getElementById('editId').value = video._id;
-  document.getElementById('editTitle').value = video.title;
-  document.getElementById('editUrl').value = video.url;
-  document.getElementById('editDept').value = video.department;
-
-  // إنشاء CKEditor فقط عند الحاجة
-  if (!descEditor) {
-    CKEDITOR.ClassicEditor
-      .create(document.querySelector('#editDesc'), {
-        toolbar: {
-          items: [
-            'bold', 'italic', 'link', 'insertImage', 'insertTable',
-            'bulletedList', 'numberedList', '|', 'undo', 'redo'
-          ]
-        },
-        link: {
-          addTargetToExternalLinks: true,
-          defaultProtocol: 'https://',
-          decorators: {
-            openInNewTab: {
-              mode: 'manual',
-              label: 'فتح في تبويب جديد',
-              attributes: {
-                target: '_blank',
-                rel: 'noopener noreferrer'
-              }
-            }
-          }
-        },
-        table: {
-          contentToolbar: ['tableColumn', 'tableRow', 'mergeTableCells']
-        }
-      })
-      .then(editor => {
-        descEditor = editor;
-        descEditor.setData(video.description || '');
-      })
-      .catch(error => {
-        console.error(error);
-      });
-  } else {
-    descEditor.setData(video.description || '');
-  }
-
-  editModal.show();
-}
-
-async function saveEditModal() {
-  const id = document.getElementById('editId').value;
-  const updated = {
-    title: document.getElementById('editTitle').value,
-    description: descEditor.getData(),
-    url: document.getElementById('editUrl').value,
-    department: document.getElementById('editDept').value
-  };
-  await fetch(`${API_BASE}/api/videos/${id}`, {
-    method: 'PUT',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify(updated)
-  });
-  editModal.hide();
-  await fetchVideos();
-  renderFilteredVideos();
-}
 
 async function fetchVideos() {
   const res = await fetch(`${API_BASE}/api/videos`);
   videos = await res.json();
-  populateDepartments();
+  renderVideos();
 }
 
-function populateDepartments() {
-  const deptMap = {};
-  videos.forEach(v => {
-    deptMap[v.department] = (deptMap[v.department] || 0) + 1;
-  });
-  deptSelect.innerHTML = '<option value="">-- اختر القسم --</option>';
-  const editDept = document.getElementById('editDept');
-  editDept.innerHTML = '<option value="">-- اختر القسم --</option>';
-  Object.entries(deptMap).forEach(([dept, count]) => {
-    deptSelect.add(new Option(`${dept} (${count})`, dept));
-    editDept.add(new Option(dept, dept));
-  });
-}
-
-function renderFilteredVideos() {
-  const dept = deptSelect.value;
-  const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-  if (!dept) {
-    container.innerHTML = '<div class="alert alert-warning text-center">يرجى اختيار قسم لعرض الفيديوهات.</div>';
-    return;
-  }
-  const filtered = videos.filter(v =>
-    v.department === dept &&
-    (v.title.toLowerCase().includes(searchTerm) || v.description.toLowerCase().includes(searchTerm))
-  );
+function renderVideos() {
+  const container = document.getElementById('videoContainer');
   container.innerHTML = '';
-  if (filtered.length === 0) {
-    container.innerHTML = '<div class="alert alert-info text-center">لا توجد فيديوهات مطابقة.</div>';
-    return;
-  }
-  filtered.forEach(video => {
-    const shortTitle = video.title.split(" ").slice(0, 4).join(" ") + '...';
-    const shortDesc = video.description?.split(" ").slice(0, 3).join(" ") + '...';
+  videos.forEach(video => {
     container.innerHTML += `
       <div class="video-card">
-        <div class="form-check mb-2">
-          <input type="checkbox" class="form-check-input" data-id="${video._id}">
-        </div>
-        <small class="text-muted">عنوان الفيديو:</small>
-        <h5 class="title-tooltip" onclick="showModal(\`${video.title}\`)">${shortTitle}</h5>
-        <small class="text-muted">وصف الفيديو:</small>
-        <p class="desc-tooltip" onclick="showModal(\`${video.description}\`)">${shortDesc}</p>
-        <button class="btn btn-sm btn-info mt-2" onclick="openInPopup('${video.url}')">انقر لعرض الفيديو</button>
+        <h5>${video.title}</h5>
+        <p>${video.description?.substring(0, 50) || ''}...</p>
         <div class="action-buttons">
-          <button class="btn btn-warning btn-sm" onclick="editVideo('${video._id}')">تعديل</button>
-          <button class="btn btn-danger btn-sm" onclick="deleteVideo('${video._id}')">حذف</button>
+          <button class="btn btn-warning btn-sm" onclick="openEditor('${video._id}')">تعديل</button>
         </div>
-      </div>`;
+      </div>
+    `;
   });
+}
+
+function openEditor(id) {
+  const video = videos.find(v => v._id === id);
+  localStorage.setItem('videoToEdit', JSON.stringify(video));
+  window.open('editor.html', '_blank');
 }
 
 fetchVideos();
