--- a/public/editor.html
+++ b/public/editor.html
@@ -10,14 +10,19 @@
 <div class="container mt-4">
   <h3>تعديل الفيديو</h3>
   <input type="hidden" id="videoId">
-  <label>العنوان</label>
+
+  <label class="mt-2">العنوان</label>
   <input type="text" id="title" class="form-control mb-3">
+
   <label>الوصف</label>
   <textarea id="description"></textarea>
+
   <label class="mt-3">رابط الفيديو</label>
   <input type="text" id="url" class="form-control mb-3">
+
   <label>القسم</label>
   <input type="text" id="department" class="form-control mb-3">
+
   <button class="btn btn-primary" onclick="saveVideo()">حفظ</button>
 </div>
 
@@ -25,25 +30,42 @@
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let descEditor;
 
-document.addEventListener('DOMContentLoaded', () => {
+// تحميل البيانات عند اكتمال تحميل الصفحة بالكامل
+window.addEventListener('load', () => {
   const videoData = JSON.parse(localStorage.getItem('videoToEdit'));
   if (!videoData) {
     alert('لا توجد بيانات فيديو للتعديل');
     window.close();
     return;
   }
+
+  console.log("✅ تم تحميل بيانات الفيديو:", videoData);
+
+  // تعبئة الحقول
   document.getElementById('videoId').value = videoData._id;
   document.getElementById('title').value = videoData.title;
   document.getElementById('url').value = videoData.url;
   document.getElementById('department').value = videoData.department || '';
 
-  CKEDITOR.ClassicEditor.create(document.querySelector('#description'), {
-    toolbar: ['bold', 'italic', 'link', 'insertImage', 'insertTable', 'bulletedList', 'numberedList', '|', 'undo', 'redo'],
-    link: { addTargetToExternalLinks: true }
-  }).then(editor => {
-    descEditor = editor;
-    descEditor.setData(videoData.description || '');
-  });
+  // انتظار عنصر الوصف قبل إنشاء المحرر
+  const checkTextarea = setInterval(() => {
+    const textarea = document.querySelector('#description');
+    if (textarea) {
+      clearInterval(checkTextarea);
+      console.log("🖊️ بدء إنشاء CKEditor...");
+
+      CKEDITOR.ClassicEditor.create(textarea, {
+        toolbar: ['bold', 'italic', 'link', 'insertImage', 'insertTable', 'bulletedList', 'numberedList', '|', 'undo', 'redo'],
+        link: { addTargetToExternalLinks: true }
+      }).then(editor => {
+        descEditor = editor;
+        descEditor.setData(videoData.description || '');
+        console.log("✅ تم تهيئة CKEditor بنجاح");
+      }).catch(error => {
+        console.error("❌ خطأ في تهيئة CKEditor:", error);
+      });
+    }
+  }, 100);
 });
 
 async function saveVideo() {
@@ -54,11 +76,15 @@ async function saveVideo() {
     url: document.getElementById('url').value,
     department: document.getElementById('department').value
   };
+
+  console.log("📤 إرسال البيانات إلى الخادم:", updated);
+
   await fetch(`${API_BASE}/api/videos/${id}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(updated)
   });
+
   alert('✅ تم حفظ التعديلات بنجاح');
   window.close();
 }
