--- a/public/edit.html
+++ b/public/edit.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <title>تعديل الفيديوهات</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <script src="https://cdn.ckeditor.com/ckeditor5/41.1.0/super-build/ckeditor.js"></script>
   <style>
     body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
     .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
     .video-card { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: relative; }
     .video-card h5 { height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
-    .action-buttons { margin-top: 10px; display: flex; gap: 5px; }
+    .action-buttons { position: absolute; top: 15px; left: 15px; display: flex; gap: 10px; }
   </style>
 </head>
 <body>
@@ -18,9 +19,38 @@
   <div id="videoContainer" class="video-grid"></div>
 </div>
 
+<!-- نافذة تعديل الفيديو -->
+<div class="modal fade" id="editModal" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">تعديل الفيديو</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input type="hidden" id="editId">
+        <label>العنوان</label>
+        <input type="text" class="form-control mb-2" id="editTitle">
+        <label>الوصف</label>
+        <textarea id="editDesc"></textarea>
+        <label class="mt-3">رابط الفيديو</label>
+        <input type="text" class="form-control mb-2" id="editUrl">
+        <label>القسم</label>
+        <input type="text" class="form-control mb-2" id="editDept">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
+        <button type="button" class="btn btn-primary" onclick="saveEdit()">حفظ</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
+let descEditor = null;
 
 async function fetchVideos() {
   const res = await fetch(`${API_BASE}/api/videos`);
@@ -37,17 +67,68 @@ function renderVideos() {
         <h5>${video.title}</h5>
         <p>${video.description?.substring(0, 50) || ''}...</p>
         <div class="action-buttons">
-          <button class="btn btn-warning btn-sm" onclick="openEditor('${video._id}')">تعديل</button>
+          <button class="btn btn-warning btn-sm" onclick="openEditModal('${video._id}')">تعديل</button>
         </div>
       </div>
     `;
   });
 }
 
-function openEditor(id) {
+function openEditModal(id) {
   const video = videos.find(v => v._id === id);
-  localStorage.setItem('videoToEdit', JSON.stringify(video));
-  window.open('editor.html', '_blank');
+  document.getElementById('editId').value = video._id;
+  document.getElementById('editTitle').value = video.title;
+  document.getElementById('editUrl').value = video.url;
+  document.getElementById('editDept').value = video.department || '';
+
+  // حفظ بيانات الوصف مؤقتاً ليتم إدخالها بعد فتح المودال
+  document.getElementById('editDesc').setAttribute('data-description', video.description || '');
+
+  const modal = new bootstrap.Modal(document.getElementById('editModal'));
+  modal.show();
+}
+
+// عند فتح المودال نهائياً
+document.getElementById('editModal').addEventListener('shown.bs.modal', function () {
+  const textarea = document.querySelector('#editDesc');
+
+  // إذا كان هناك محرر قديم، دمره
+  if (descEditor) {
+    descEditor.destroy().then(() => {
+      createEditor(textarea);
+    });
+  } else {
+    createEditor(textarea);
+  }
+});
+
+function createEditor(textarea) {
+  CKEDITOR.ClassicEditor.create(textarea, {
+    toolbar: ['bold', 'italic', 'link', 'insertImage', 'insertTable', 'bulletedList', 'numberedList', '|', 'undo', 'redo'],
+    link: { addTargetToExternalLinks: true }
+  }).then(editor => {
+    descEditor = editor;
+    const desc = textarea.getAttribute('data-description') || '';
+    descEditor.setData(desc);
+  }).catch(err => console.error(err));
+}
+
+async function saveEdit() {
+  const id = document.getElementById('editId').value;
+  const updated = {
+    title: document.getElementById('editTitle').value,
+    description: descEditor ? descEditor.getData() : '',
+    url: document.getElementById('editUrl').value,
+    department: document.getElementById('editDept').value
+  };
+  await fetch(`${API_BASE}/api/videos/${id}`, {
+    method: 'PUT',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(updated)
+  });
+  alert('✅ تم حفظ التعديلات');
+  fetchVideos();
+  bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 }
 
 fetchVideos();
