--- a/public/edit.html
+++ b/public/edit.html
@@ -2,9 +2,12 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تعديل الفيديوهات</title>
+  <title>تعديل الفيديوهات - TinyMCE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-  <script src="https://cdn.ckeditor.com/ckeditor5/41.1.0/super-build/ckeditor.js"></script>
+
+  <!-- TinyMCE -->
+  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
   <style>
     body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
     .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
@@ -31,10 +34,13 @@
         <input type="hidden" id="editId">
         <label>العنوان</label>
         <input type="text" class="form-control mb-2" id="editTitle">
+
         <label>الوصف</label>
         <textarea id="editDesc"></textarea>
+
         <label class="mt-3">رابط الفيديو</label>
         <input type="text" class="form-control mb-2" id="editUrl">
+
         <label>القسم</label>
         <input type="text" class="form-control mb-2" id="editDept">
       </div>
@@ -50,7 +56,16 @@
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
-let descEditor = null;
+
+// تهيئة TinyMCE مرة واحدة عند تحميل الصفحة
+tinymce.init({
+  selector: '#editDesc',
+  height: 300,
+  directionality: 'rtl',
+  plugins: 'link image table lists code',
+  toolbar: 'undo redo | bold italic underline | alignleft aligncenter alignright | bullist numlist | link image table | code',
+  language: 'ar'
+});
 
 async function fetchVideos() {
   const res = await fetch(`${API_BASE}/api/videos`);
@@ -81,51 +96,28 @@ function openEditModal(id) {
   document.getElementById('editUrl').value = video.url;
   document.getElementById('editDept').value = video.department || '';
 
-  // حفظ بيانات الوصف مؤقتاً ليتم إدخالها بعد فتح المودال
-  document.getElementById('editDesc').setAttribute('data-description', video.description || '');
+  // تعيين بيانات الوصف في TinyMCE
+  tinymce.get('editDesc').setContent(video.description || '');
 
   const modal = new bootstrap.Modal(document.getElementById('editModal'));
   modal.show();
-}
-
-// عند فتح المودال نهائياً
-document.getElementById('editModal').addEventListener('shown.bs.modal', function () {
-  const textarea = document.querySelector('#editDesc');
-
-  // إذا كان هناك محرر قديم، دمره
-  if (descEditor) {
-    descEditor.destroy().then(() => {
-      createEditor(textarea);
-    });
-  } else {
-    createEditor(textarea);
-  }
-});
-
-function createEditor(textarea) {
-  CKEDITOR.ClassicEditor.create(textarea, {
-    toolbar: ['bold', 'italic', 'link', 'insertImage', 'insertTable', 'bulletedList', 'numberedList', '|', 'undo', 'redo'],
-    link: { addTargetToExternalLinks: true }
-  }).then(editor => {
-    descEditor = editor;
-    const desc = textarea.getAttribute('data-description') || '';
-    descEditor.setData(desc);
-  }).catch(err => console.error(err));
 }
 
 async function saveEdit() {
   const id = document.getElementById('editId').value;
   const updated = {
     title: document.getElementById('editTitle').value,
-    description: descEditor ? descEditor.getData() : '',
+    description: tinymce.get('editDesc').getContent(),
     url: document.getElementById('editUrl').value,
     department: document.getElementById('editDept').value
   };
+
   await fetch(`${API_BASE}/api/videos/${id}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
     body: JSON.stringify(updated)
   });
+
   alert('✅ تم حفظ التعديلات');
   fetchVideos();
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
