--- a/public/edit.html
+++ b/public/edit.html
@@ -5,8 +5,8 @@
   <title>تعديل الفيديوهات - TinyMCE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
 
-  <!-- TinyMCE -->
-  <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+  <!-- TinyMCE نسخة مجانية بدون API Key -->
+  <script src="https://cdn.jsdelivr.net/npm/tinymce@6/tinymce.min.js"></script>
 
   <style>
     body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
