--- a/public/edit.html
+++ b/public/edit.html
@@ -5,8 +5,8 @@
   <title>تعديل الفيديوهات - TinyMCE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
 
-  <!-- TinyMCE نسخة مجانية بدون API Key -->
-  <script src="https://cdn.jsdelivr.net/npm/tinymce@6/tinymce.min.js"></script>
+  <!-- TinyMCE مع مفتاح API -->
+  <script src="https://cdn.tiny.cloud/1/p2pw76xjm7bm67mqgviaijker6fp6ayqz4szcsnlf3s6n53k/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
   <style>
     body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
@@ -57,7 +57,7 @@
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 
-// تهيئة TinyMCE مع دعم الروابط بشكل كامل
+// تهيئة TinyMCE مع دعم الروابط بالكامل
 tinymce.init({
   selector: '#editDesc',
   height: 300,
