--- a/public/edit.html
+++ b/public/edit.html
@@ -5,7 +5,7 @@
   <title>تعديل الفيديوهات - TinyMCE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
 
-  <!-- TinyMCE مع مفتاح API -->
+  <!-- TinyMCE مع مفتاح API الخاص بك -->
   <script src="https://cdn.tiny.cloud/1/p2pw76xjm7bm67mqgviaijker6fp6ayqz4szcsnlf3s6n53k/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
   <style>
@@ -57,7 +57,7 @@
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 
-// تهيئة TinyMCE مع دعم الروابط بالكامل
+// تهيئة TinyMCE بحيث يكون حقل URL نشط دائمًا
 tinymce.init({
   selector: '#editDesc',
   height: 300,
@@ -71,7 +71,9 @@ tinymce.init({
     { title: 'فتح في نفس النافذة', value: '' },
     { title: 'فتح في نافذة جديدة', value: '_blank' }
   ],
-  readonly: false
+  link_context_toolbar: true,
+  readonly: false,
+  valid_elements: '*[*]'
 });
 
 async function fetchVideos() {
