--- a/public/edit.html
+++ b/public/edit.html
@@ -2,18 +2,19 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تعديل الفيديوهات - TinyMCE</title>
+  <title>تعديل الفيديوهات - Quill</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
-
-  <!-- TinyMCE مع مفتاح API الخاص بك -->
-  <script src="https://cdn.tiny.cloud/1/p2pw76xjm7bm67mqgviaijker6fp6ayqz4szcsnlf3s6n53k/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-
+  
+  <!-- مكتبة Quill -->
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  
   <style>
     body { background-color: #f7f9fc; padding: 30px; font-family: 'Segoe UI', sans-serif; }
     .video-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
     .video-card { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); position: relative; }
     .video-card h5 { height: 3em; line-height: 1.5em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
     .action-buttons { position: absolute; top: 15px; left: 15px; display: flex; gap: 10px; }
+    #editor { height: 200px; background: white; }
   </style>
 </head>
 <body>
@@ -36,7 +37,7 @@
         <input type="text" class="form-control mb-2" id="editTitle">
 
         <label>الوصف</label>
-        <textarea id="editDesc"></textarea>
+        <div id="editor"></div>
 
         <label class="mt-3">رابط الفيديو</label>
         <input type="text" class="form-control mb-2" id="editUrl">
@@ -53,27 +54,24 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- مكتبة Quill -->
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script>
 const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 
-// تهيئة TinyMCE بحيث يكون حقل URL نشط دائمًا
-tinymce.init({
-  selector: '#editDesc',
-  height: 300,
-  directionality: 'rtl',
-  plugins: 'link image table lists code',
-  toolbar: 'undo redo | bold italic underline | alignleft aligncenter alignright | bullist numlist | link image table | code',
-  language: 'ar',
-  link_title: true,
-  default_link_target: "_blank",
-  target_list: [
-    { title: 'فتح في نفس النافذة', value: '' },
-    { title: 'فتح في نافذة جديدة', value: '_blank' }
-  ],
-  link_context_toolbar: true,
-  readonly: false,
-  valid_elements: '*[*]'
+// تهيئة محرر Quill مع أدوات الروابط
+const quill = new Quill('#editor', {
+  theme: 'snow',
+  modules: {
+    toolbar: [
+      ['bold', 'italic', 'underline'],
+      [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+      ['link', 'image'],
+      [{ 'direction': 'rtl' }],
+      ['clean']
+    ]
+  }
 });
 
 async function fetchVideos() {
@@ -105,8 +103,8 @@ function openEditModal(id) {
   document.getElementById('editUrl').value = video.url;
   document.getElementById('editDept').value = video.department || '';
 
-  // تعيين بيانات الوصف في TinyMCE
-  tinymce.get('editDesc').setContent(video.description || '');
+  // تعيين الوصف في Quill
+  quill.root.innerHTML = video.description || '';
 
   const modal = new bootstrap.Modal(document.getElementById('editModal'));
   modal.show();
@@ -116,7 +114,7 @@ async function saveEdit() {
   const id = document.getElementById('editId').value;
   const updated = {
     title: document.getElementById('editTitle').value,
-    description: tinymce.get('editDesc').getContent(),
+    description: quill.root.innerHTML, // حفظ المحتوى كـ HTML
     url: document.getElementById('editUrl').value,
     department: document.getElementById('editDept').value
   };
