--- a/public/edit.html
+++ b/public/edit.html
@@ -35,6 +35,7 @@
       white-space: nowrap;
       cursor: pointer;
       margin: 2px 0 10px 0;
+      color: #0d6efd;
     }
     .video-grid {
       display: flex;
@@ -79,6 +80,19 @@
     </select>
     <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
     <div id="videoContainer" class="video-grid"></div>
+  </div>
+
+  <!-- نافذة عرض الوصف -->
+  <div class="modal fade" id="descModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="descTitle"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body" id="descContent" style="white-space: pre-wrap; text-align: justify;"></div>
+      </div>
+    </div>
   </div>
 
   <!-- نافذة تعديل الفيديو -->
@@ -170,7 +184,7 @@ function renderVideos() {
     card.className = 'video-card';
 
     const title = `<div class="video-title">عنوان الفيديو: ${video.title}</div>`;
-    const description = `<div class="video-description">وصف الفيديو: ${video.description}</div><br>`;
+    const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.title)}', '${escapeHtml(video.description)}')">وصف الفيديو: ${video.description}</div><br>`;
 
     const link = video.link || video.url || '';
     let media = '';
@@ -200,9 +214,20 @@ function renderVideos() {
   });
 }
 
+function escapeHtml(text) {
+  return text?.replace(/"/g, '&quot;').replace(/'/g, '&#39;') || '';
+}
+
 function extractYouTubeID(url) {
   const match = url.match(/[?&]v=([^&#]*)|youtu\.be\/([^&#]*)/);
   return match ? (match[1] || match[2]) : '';
+}
+
+function showDescription(title, desc) {
+  document.getElementById('descTitle').textContent = title;
+  document.getElementById('descContent').innerHTML = desc;
+  const modal = new bootstrap.Modal(document.getElementById('descModal'));
+  modal.show();
 }
 
 function openEditModal(id) {
