--- a/public/edit.html
+++ b/public/edit.html
@@ -15,38 +15,48 @@
     .video-card {
       background: white;
       border-radius: 12px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      padding: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 12px;
       margin: 5px;
       width: 300px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      height: auto;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .video-card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
     .video-title {
       font-weight: bold;
-      margin: 0;
+      margin-bottom: 6px;
+      min-height: 48px; /* ثابت لارتفاع العنوان */
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     .video-description {
-      height: 20px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      cursor: pointer;
-      margin: 2px 0 10px 0;
       color: #0d6efd;
+      cursor: pointer;
+      min-height: 40px; /* ثابت لارتفاع الوصف */
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      margin-bottom: 8px;
     }
     .video-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      gap: 15px;
     }
     video, iframe {
       width: 100%;
-      height: 200px;
-      margin: 0;
+      height: 200px; /* موحد لجميع المعاينات */
+      border-radius: 6px;
     }
     .popout-button {
       background-color: #0d6efd;
@@ -55,7 +65,7 @@
       padding: 6px 12px;
       border-radius: 5px;
       cursor: pointer;
-      margin-top: 5px;
+      margin-top: 6px;
     }
     .action-buttons {
       display: flex;
@@ -184,7 +194,7 @@ function renderVideos() {
     card.className = 'video-card';
 
     const title = `<div class="video-title">عنوان الفيديو: ${video.title}</div>`;
-    const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.title)}', '${escapeHtml(video.description)}')">وصف الفيديو: ${video.description}</div><br>`;
+    const description = `<div class="video-description" onclick="showDescription('${escapeHtml(video.title)}', '${escapeHtml(video.description)}')">وصف الفيديو: ${video.description}</div>`;
 
     const link = video.link || video.url || '';
     let media = '';
